# CustomYOLOv5-NIST-Buckets-VOXL-tflite

./: .gitattributes  .gitignore  DataCollection.md  DataLabeling.md  LICENSE  ModelDeployment.md  ModelTesting.md  ModelTraining.md  README.md  VOXLPackages.md
dataset/: nist_buckets_data.yaml  nist_labels.txt
scripts/: image_capture.py  model_conversion.py  model_training.py
voxl-tflite-server/: CHANGELOG  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  deploy_to_voxl.sh  install_build_deps.sh  make_package.sh
voxl-tflite-server/bash_completions/: voxl-configure-tflite
voxl-tflite-server/include/: ai_detection.h  config_file.h  inference_helper.h  resize.h
voxl-tflite-server/pkg/control/: control  postinst
voxl-tflite-server/scripts/apq8096/: voxl-configure-tflite
voxl-tflite-server/scripts/qrb5165/: voxl-configure-tflite
voxl-tflite-server/services/: voxl-tflite-server.service
voxl-tflite-server/src/: CMakeLists.txt  inference_helper.cpp  main.cpp  resize.c
